--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
     "@angular/forms": "~11.2.5",
+    "@angular/localize": "~11.2.5",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "angular-particle": "^1.0.4",
+    "angular-typing-animation": "^0.5.4",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
+    "t-writer.js": "^1.0.4",
     "tslib": "^2.0.0",
+    "typewriter-effect": "^2.17.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
